Bug 421347 - Information panel not always shows information about a folder clicked in places panel
Summary: Information panel not always shows information about a folder clicked in plac...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-11 16:22 UTC by Patrick Silva
Modified: 2021-04-19 15:46 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08
Sentry Crash Report:


Attachments
screen recording (1.50 MB, video/webm)
2020-05-11 16:22 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-05-11 16:22:25 UTC
Created attachment 128364 [details]
screen recording

issue previously mentioned in bug 420340 comment 6 

STEPS TO REPRODUCE
1. open Dolphin
2. if information panel is not enabled, enable it by pressing F11
3. click on Downloads, Documents or Desktop entries in places panel
4. click on Home entry in places panel

OBSERVED RESULT
Despite "Home" was clicked/selected in the last step, information panel shows information about the folder
clicked in the step 3 because Dolphin leaves it selected after the last step.
Watch the attached screen recording please.

EXPECTED RESULT
no folder should be selected after the last step, so information panel always shows the information of the folder clicked in the last step.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 1 Justin Zobel 2020-11-02 06:57:15 UTC
Confirmed on Dolphin from git master, seems to only happen when returning to the Home folder.
Comment 2 Bug Janitor Service 2020-11-08 07:23:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/102
Comment 3 Stefan Brüns 2020-11-11 18:43:15 UTC
The behavior is consistent over all folders, it selects the item which is the topmost ancestor of the previously selected item.

When you select the root folder, it will select the /home folder/mountpoint (if you where browsing something in your home folder previously).

The behavior is also the same when you use e.g. the Devices section in the panel.

It resembles the behavior of the "Up" folder action, and is also the same when you edit the location bar manually (e.g. removing several path components from the current location), or by clicking on a parent item.
Comment 4 Méven Car 2021-04-17 09:10:18 UTC
Git commit 4f4e3d392c9645e3d43c362af72e2066430890f6 by Méven Car.
Committed on 17/04/2021 at 08:44.
Pushed by meven into branch 'master'.

PlacesPanel: activating a place does not select its previously selected children

M  +2    -0    src/dolphinmainwindow.cpp
M  +12   -0    src/dolphinviewcontainer.cpp
M  +9    -0    src/dolphinviewcontainer.h

https://invent.kde.org/system/dolphin/commit/4f4e3d392c9645e3d43c362af72e2066430890f6