PlacesPanel: activating a place does not select its previously selected children

BUG: 421347